find_package(cgreen)
if(cgreen_FOUND)
  add_executable(bf bloomfilter.c)
  target_link_libraries(bf PRIVATE bfe_static ${CGREEN_LIBRARIES})
  target_include_directories(bf PRIVATE ${CGREEN_INCLUDE_DIRS})
  add_test(NAME BF COMMAND bf)

  add_executable(bfenc bfenc.c)
  target_link_libraries(bfenc PRIVATE bfe ${CGREEN_LIBRARIES})
  target_include_directories(bfenc PRIVATE ${CGREEN_INCLUDE_DIRS})
  add_test(NAME BFE COMMAND bfenc)

  add_executable(crypto_api crypto_api.c)
  target_link_libraries(crypto_api PRIVATE bfe ${CGREEN_LIBRARIES})
  target_include_directories(crypto_api PRIVATE ${CGREEN_INCLUDE_DIRS})
  add_test(NAME crypto_api COMMAND crypto_api)
endif()
